[package]
name = "use_toggle"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true, features = ["nightly", "csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
leptos-use = { path = "../..", default-features = false, features = ["use_toggle", "docs"] }
web-sys = "0.3"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
