[package]
name = "use_web_lock"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
leptos = { workspace = true, features = ["nightly", "csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
leptos-use = { path = "../..", default-features = false, features = ["use_web_lock", "docs"] }
web-sys = { version = "0.3", features = ["Lock"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
