[package]
name = "webtransport_test_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21.0"
rcgen = "0.10.0"
ring = "0.16.20"
time = "0.3.21"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wtransport = "0.1"